# MatrixCalculator_C

./: CMakeLists.txt  Dokumentacja projektu.txt  io_operations.c  main.c  matrix_operations.c  matrix_operations.h  memory_operations.c  sylabus_raport.docx
